--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,2 @@
-project.base-dir=file:///Users/everton.aleixo/Documents/everton/erp-coors
-# Templates reloading during development
-spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
 spring.thymeleaf.cache=false
-
-
-spring.resources.static-locations=${project.base-dir}/src/main/resources/static/
-spring.resources.cache-period=0
+#spring.resources.cache-period=0
