--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.thymeleaf.cache=false
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.resources.cache-period=0
+
+spring.view.suffix: .html
+
+spring.view.prefix: /
