--- a/pom.xml
+++ b/pom.xml
@@ -75,10 +75,10 @@
             <artifactId>spring-jdbc</artifactId>
             </dependency>
         <!-- MySQL -->
-        <!-- <dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-        </dependency> -->
+        </dependency>
         <!-- PostgreSQL -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
